One more fix for collapsed + copy workflow.

--- a/app/javascript/styles/snibox/components/_card.scss
+++ b/app/javascript/styles/snibox/components/_card.scss
@@ -53,6 +53,9 @@ $card-header-height: 45px;
     opacity: 0;
     position: absolute;
     z-index: -10;
+
+    max-height: 0;
+    overflow: hidden;
   }
 }
 
